# system76-kbd-led

./: .clang-format  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
api/: app.js  package.json
api/routes/: index.js
html/: package.json
html/src/: App.css  App.js
src/: CMakeLists.txt  brightness.hpp  buffer.c  buffer.h  bytes.c  bytes.h  cache.c  cache.h  cache.hpp  color.hpp  colors.c  colors.h  error.h  fs.c  fs.cpp  fs.h  fs.hpp  keyboard.cpp  keyboard.hpp  logging.cpp  logging.hpp  main.c  main.cpp
src/color/: region.hpp  rgb.cpp  rgb.hpp
systemd/: system76-kbd-led-cache.service  system76-kbd-led.service
